--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,5 @@ Description: More about what it does (maybe more than one line)
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/Youngji2022/myutils
+BugReports: https://github.com/Youngji2022/myutils/issues
