--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,5 +16,8 @@ URL: https://github.com/Youngji2022/myutils
 BugReports: https://github.com/Youngji2022/myutils/issues
 RoxygenNote: 7.2.0
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+VignetteBuilder: knitr
