--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,3 +21,8 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 VignetteBuilder: knitr
+Depends: 
+    R (>= 2.10)
+Imports: 
+    ggplot2,
+    stats
